@@ -1,3 +1,9 @@
+2007-01-05  Ito Kazumitsu  <kaz@maczuka.gcd.org>
+
+	* test/regression/InetAddressTest.java,
+	test/regression/InetSocketAddressTest.java: Modified so that various
+	expressions of IPv6 address of localhost can be accepted.
+
 2007-01-04  Dalibor Topic  <robilad@kaffe.org>
 
 	* libraries/javalib/external/classpath/ : Resynced with GNU Classpath until
